# microservices_ecommerce

./: CMakeLists.txt  README.md
authentication_service/: CMakeLists.txt
authentication_service/include/: AuthenticationService.h  User.h
authentication_service/src/: AuthenticationService.cpp  User.cpp  main.cpp
common/: CMakeLists.txt
common/include/: Constants.h
database/include/: DatabaseConnector.h
order_service/: CMakeLists.txt
order_service/include/: Order.h  OrderService.h
order_service/src/: DatabaseConnector.cpp  Order.cpp  OrderService.cpp  main.cpp
product_service/: CMakeLists.txt
product_service/include/: Product.h  ProductService.cpp  ProductService.h
product_service/src/: Product.cpp  main.cpp
